kubernetes/syncthing/syncthing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: syncthing
          image: linuxserver/syncthing:2.1.1
          ports:
            - containerPort: 8384
              protocol: TCP
            - containerPort: 22000
              protocol: TCP
            - containerPort: 22000
              protocol: UDP
            - containerPort: 21027
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /vault
              name: vault
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: syncthing-config
        - name: vault
          persistentVolumeClaim:
            claimName: syncthing-vault
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: syncthing
spec:
  selector:
    app: syncthing
  ports:
    - port: 8384
      targetPort: 8384
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-alt
  namespace: syncthing
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.254.4
  selector:
    app: syncthing
  ports:
    - port: 22000
      targetPort: 22000
      protocol: TCP
      name: sync-tcp
    - port: 22000
      targetPort: 22000
      protocol: UDP
      name: sync-udp
    - port: 21027
      targetPort: 21027
      protocol: UDP
      name: local-discovery
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: syncthing
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Syncthing
    gethomepage.dev/group: Home
    gethomepage.dev/icon: syncthing
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: syncthing.saturn.ci
    external-dns.alpha.kubernetes.io/target: direct.saturn.ci
spec:
  tls:
    - secretName: syncthing.saturn.ci
      hosts:
        - syncthing.saturn.ci
  rules:
    - host: "syncthing.saturn.ci"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: syncthing
                port:
                  number: 8384
